[package]
name = "logging_service"
version = "0.1.0"
authors = ["Felix Rech <s9ferech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
hyper-tls = "0.4"
